--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<meta content="password, password generator, hash generator, password, hash, password-generator, hash-generator, base64, encode, encryption" name="keywords"/>
 		<title>Password & Hash generator</title>
 	</head>
 	<body>
